# matlab_rosbag

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  COMPILING.md  LICENSE.txt  README.md  mainpage.dox  manifest.xml  package.xml  release.sh
src/: README  ROSBag.m  matlab_util.hpp  mex_compile.sh  mex_compile_ros.sh  parser.cpp  parser.hpp  parser_test.cpp  read_bag.cpp  read_bag_test.cpp  rosbag_wrapper.cpp  rosbag_wrapper.hpp
src/+ros/: Bag.m  HiddenHandle.m  TFTree.m  msgs2mat.m  pose2xyt.m
src/example/: bag_example.m  example.bag  example.m  tf_example.m
test/: constants.bag  empty_msgs.bag
