<?xml version="1.0"?>
<package>
  <name>matlab_rosbag</name>
  <version>0.2.0</version>
  <description>A small library for reading ROS bags in Matlab</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roscpp</run_depend>

  <test_depend>gtest</test_depend>
</package>
